send command as utf8, as the communication charset is utf8

fixes non-ascii file paths.
BUG: 294004